--- a/afterend/src/main/resources/application.properties
+++ b/afterend/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.show-sql=true
 spring.servlet.multipart.max-request-size=-1
 spring.servlet.multipart.max-file-size = -1
 
-pythonConfig.path=/usr/bin/python3.6
-#  pythonConfig.path=path: /usr/bin/python3
-pythonConfig.train=./python/Train.py
-pythonConfig.predict=./python/Predict.py
+pythonConfig=/usr/bin/python3
+fileConfig.trainDataPath: /home/data
+fileConfig.modelPath: /home/model
+fileConfig.tempPath: /home/temp
