--- a/afterend/src/main/resources/application.properties
+++ b/afterend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/META_INF/resources/,classpath:/static/,classpath:/,classpath:/public/,classpath:/templates/
-spring.datasource.url=jdbc:mysql://47.97.106.46:3306/finaldesign?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/finaldesign?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -15,6 +15,6 @@ spring.servlet.multipart.max-request-size=-1
 spring.servlet.multipart.max-file-size = -1
 
 pythonPath=/usr/bin/python3.6
-fileConfig.trainDataPath: /home/qian/Desktop/CWE15/test/data
-fileConfig.modelPath: /home/qian/Desktop/CWE15/test/model
-fileConfig.tempPath: /home/qian/Desktop/CWE15/test/temp
+fileConfig.trainDataPath: /home/data
+fileConfig.modelPath: /home/model
+fileConfig.tempPath: /home/temp
